# AQTech

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  dockerfile  package-lock.json  pyproject.toml
api/: models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_student_status.py  0002_user_role.py  0003_alter_user_role_student.py  0003_timeslotteacherassignment.py  0004_course_level_storage_certificate_coursesession_and_more.py  0005_rename_quantiry_storage_quantity.py  0006_remove_attendance_checked_date.py  0007_attendance_checked_date.py  0008_remove_attendance_checked_date.py  0009_attendance_checked_date.py  0010_attendance_attendance_date_and_more.py  0011_alter_attendance_attendance_date.py  0012_remove_coursesession_session_number_and_more.py  0013_remove_student_contact_remove_student_dob_and_more.py  0014_attendance_end_time_attendance_start_time.py  0015_rename_level_type_rename_level_course_type_and_more.py  0016_course_price.py  0017_certificate_student.py
api/models/: __init__.py  attendance.py  category.py  certificate.py  course.py  level.py  receipt.py  session.py  storage.py  student.py  teacher.py  teacher_assignment.py  timeslot.py  timeslot_assignment.py  type.py  user.py
api/serializers/: __init__.py  attendance_serializers.py  category_serializers.py  certificate_serizlizers.py  course_serializers.py  level_serializers.py  receipt_serializers.py  session_serializers.py  session_serizlizers.py  storage_serializers.py  (+4 more)
core/: settings.py  urls.py
nginx/: default.conf
(+16 files in other folders)
