[tool.poetry]
name = "root"
version = "0.1.0"
description = "test the devevlop image storage"
authors = ["ชื่อเจ้าของ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
django-storages = {extras = ["google"], version = "^1.14.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"